# leap

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  run_pipeline.sh
.github/workflows/: ci-cd.yaml
configs/: README.md  __init__.py  config_perturbation_model.py  config_regression_model.py  config_rpz_model.py  config_trainer.py  get_config.py  get_config_data.py  get_config_models.py  get_config_split.py
data/: README.md  list_of_most_variant_genes.csv  list_of_perturbations_task_1.csv  list_of_perturbations_task_2.csv  list_of_perturbations_task_4.csv  list_of_perturbations_task_5.csv  list_of_tissues_task_3.csv  list_of_tissues_task_4.csv
models/: README.md
results/: README.md
scripts/: 1_pretrain_representations.py  2_train_regression_heads.py  3_ensemble_representation_layers.py  README.md  __init__.py  train_and_save_preprocessor_and_rpz.py
src/leap/: __init__.py
src/leap/data/: __init__.py  load_depmap.py  load_gene_sets.py  preclinical_dataset.py  preprocessor.py  splits.py
src/leap/metrics/: __init__.py  regression_metrics.py
src/leap/pipelines/: __init__.py  perturbation_pipeline.py
src/leap/regression_models/: __init__.py  elastic_net.py  knn_regressor.py  lgbm_regressor.py  mlp_regressor.py  utils.py
src/leap/representation_models/: __init__.py  auto_encoder.py  masked_auto_encoder.py  pca.py  utils.py
src/leap/trainer/: __init__.py  perturbation_model_trainer.py
src/leap/utils/: __init__.py  config_utils.py  device.py  io.py  seed.py
src/tests/: conftest.py  test_version.py
src/tests/configs/: __init__.py  test_config_perturbation_model.py  test_config_regression_model.py  test_config_rpz_model.py  test_config_trainer.py  test_get_config_functions.py
src/tests/leap/: test_device.py
src/tests/leap/data/: test_data.py  test_splits.py
src/tests/leap/metrics/: test_metrics.py
src/tests/leap/pipelines/: test_pipelines.py
src/tests/leap/regression_models/: test_regression_models.py
src/tests/leap/representation_models/: test_representation_models.py
src/tests/leap/trainer/: test_trainer.py
src/tests/leap/utils/: test_utils.py
